<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">App Lounge</string>
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_search">Search</string>
    <string name="menu_updates">Updates</string>
    <string name="menu_settings">Settings</string>
    <string name="search_hint">Search for an app</string>
    <string name="no_apps_found">No apps found…</string>
    <string name="apps">Applications</string>
    <string name="games">Games</string>
    <string name="category_icon">Category Icon</string>
    <string name="open_source">Open Source</string>
    <string name="pwa">PWA</string>
    <string name="sign_in_title">Welcome</string>
    <string name="sign_in_desc">Sign in to App Lounge using your Google account, or select the Anonymous mode to sign in privately.</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_anonymous">Anonymous mode</string>
    <string name="or">or</string>
    <string name="tos_agree">Accept</string>
    <string name="tos_disagree">Reject</string>
    <string name="tos_agree_date">Accepted</string>
    <string name="tos_warning">Before we can proceed you must read and agree to the Terms of Service.</string>
    <string name="preference_updates_title">Updates</string>
    <string name="preference_update_interval_default">24</string>
    <string name="preference_update_interval_title">Update check interval</string>
    <string name="preference_update_wifi_only_title">Only on un-metered networks</string>
    <string name="preference_update_wifi_only_description">Update apps automatically only on un-metered networks such as Wi-Fi</string>
    <string name="preference_update_install_automatically_title">Automatically install updates</string>
    <string name="preference_update_install_automatically_description">Download and install app updates in the background</string>
    <string name="preference_update_notify_available_title">Show available updates</string>
    <string name="preference_update_notify_available_description">Show a notification when app updates are available</string>
    <string name="Show_applications">Show applications:</string>
    <string name="Show_all_apps">Show all apps</string>
    <string name="show_only_open_source_apps">Show only open-source apps</string>
    <string name="show_only_pwa_apps">Show only PWAs</string>
    <string name="account">Account</string>
    <string name="terms_services">Terms of Services</string>
    <string name="user_anonymous">Anonymous</string>
    <string name="logout">Log Out</string>
    <string name="description">Description</string>
    <string name="share_intent">Check out \"<xliff:g id="rating">%1$s</xliff:g>\"\n<xliff:g id="rating">%2$s</xliff:g></string>
    <string name="ok">OK</string>
    <string name="install">Install</string>
    <string name="installing">Installing</string>
    <string name="cancel">Cancel</string>
    <string name="app_icon">App icon</string>
    <string name="not_available" translatable="false">N/A</string>
    <string name="open">Open</string>
    <string name="retry">Retry</string>
    <string name="more">More</string>
    <string name="update">Update</string>
    <string name="ratings">Ratings</string>
    <string name="rating">Rating</string>
    <string name="rating_description">Score out of 5. Computed using users\' ratings of the app.</string>
    <string name="rating_out_of" translatable="false"><xliff:g id="rating">%1$s</xliff:g>/5</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_score">Privacy Score</string>
    <string name="privacy_description">The Privacy Score is automatically computed from permissions and trackers that are detected in applications. It gives an idea indication about how much an application is likely to be micro-targeting its users.&lt;br /&gt;&lt;br /&gt;Its computing algorithm\'s source code can be &lt;a href="<xliff:g id="source_code">%1$s</xliff:g>"&gt;found here&lt;/a&gt;.&lt;br /&gt;&lt;br /&gt;Trackers detection is performed using &lt;a href="<xliff:g id="exodus">%2$s</xliff:g>"&gt;Exodus Privacy tools&lt;/a&gt;.&lt;br /&gt;&lt;br /&gt;Score out of 10.&lt;br /&gt;&lt;br /&gt;Learn more about how the Privacy Score is computed, its limitations and how you can protect yourself from micro-targeting &lt;a href="<xliff:g id="e_doc">%3$s</xliff:g>&gt;on this page&lt;/a&gt;.</string>
    <string name="privacy_rating_out_of" translatable="false"><xliff:g id="rating">%1$s</xliff:g>/10</string>
    <string name="privacy_analyses">Privacy analyses</string>
    <string name="permissions">Permissions</string>
    <string name="trackers_title">Trackers</string>
    <string name="information">Information</string>
    <string name="version">Version: <xliff:g id="version_code">%1$s</xliff:g></string>
    <string name="updated_on">Updated on: <xliff:g id="version_code">%1$s</xliff:g></string>
    <string name="min_android_version">Requires: <xliff:g id="version_code">%1$s</xliff:g></string>
    <string name="license">License: <xliff:g id="version_code">%1$s</xliff:g></string>
    <string name="package_name">Package name: <xliff:g id="version_code">%1$s</xliff:g></string>
    <string name="install_blocked_anonymous">Paid apps cannot be installed in anonymous mode. Please log into your Google account to install paid apps.</string>
    <string name="install_blocked_google">Paid apps are not supported in App Lounge yet. Just a little more patience, it will soon be the case.</string>
    <string name="message_app_available_later">This app will be available later!</string>
    <string name="unknown_error">Unknown Error!</string>
    <string name="not_enough_storage">There is not enough space available to download this application!</string>
    <string name="app_not_found">Your application was not found.</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="show_more">Show more</string>
    <string name="update_all">Update All</string>
    <plurals name="updates_notification_title">
        <item quantity="one"><xliff:g id="version_code">%1$d</xliff:g> app update is available</item>
        <item quantity="other"><xliff:g id="version_code">%1$d</xliff:g> app updates are available</item>
    </plurals>
    <string name="auto_updates_notification">App updates will be installed automatically</string>
    <string name="manual_updates_notification">App updates will not be installed automatically</string>
    <string name="all_apps_updated">All apps are up-to-date</string>
    <string name="discover">Discover</string>
    <string name="top_updated_apps">Top Updated Apps</string>
    <string name="top_updated_games">Top Updated Games</string>
    <string name="popular_apps_in_last_24_hours">Popular Apps In Last 24 Hours</string>
    <string name="popular_games_in_last_24_hours">Popular Games In Last 24 Hours</string>
    <string name="popular_apps">Popular Apps</string>
    <string name="popular_games">Popular Games</string>
    <string name="topselling_free_apps">Top Free Apps</string>
    <string name="topselling_free_games">Top Free Games</string>
    <string name="topgrossing_apps">Top Grossing Apps</string>
    <string name="topgrossing_games">Top Grossing Games</string>
    <string name="movers_shakers_apps">Top Trending Apps</string>
    <string name="movers_shakers_games">Top Trending Games</string>
    <string name="downloads">Downloads</string>
    <string name="updates">Updates</string>
    <string name="automatically_install_updates_notification_text">App updates will be installed automatically</string>
    <string name="manually_install_updates_notification_text">App updates will not be installed automatically</string>
    <string name="updates_notification_unmetered_network_warning">Waiting for un-metered network</string>
    <string name="no_permission_found">No runtime android permission found!</string>
    <string name="privacy_computed_using_text">Computed using &lt;a href="<xliff:g id="exodus">%1$s</xliff:g>"&gt; Exodus Privacy Analysis</string>
    <string name="no_tracker_found">No Tracker Found!</string>
    <string name="tracker_information_not_found">No tracker information available for this app.</string>
    <string name="update_check_intervals" translatable="false">updateCheckIntervals</string>
    <string name="updateNotify" translatable="false">updateNotify</string>
    <string name="auto_install_enabled" translatable="false">updateInstallAuto</string>
    <string name="only_unmetered_network" translatable="false">updateUnmeteredOnly</string>
    <string name="no_internet_message">Can\'t connect! Please check your internet connection and try again</string>
    <string name="timeout_title">Timeout fetching applications!</string>
    <string name="timeout_desc_gplay">Some network issue is preventing fetching all applications.
        \n\nOpen settings to look for Open source apps or PWAs only.
    </string>
    <string name="timeout_desc_cleanapk">Some network issue is preventing fetching all applications.</string>
    <string name="open_settings">Open Settings</string>
    <string name="dialog_title_paid_app"><![CDATA[Purchase <b>%1$s</b>]]></string>
    <string name="dialog_paidapp_message">When clicked confirm, it will take you to Google Play page for the app to complete the purchase using your browser. Click confirm to purchase %1$s for %2$s.</string>
    <string name="dialog_confirm">CONFIRM</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="paid_app_anonymous_message">Paid apps cannot be installed in anonymous mode. Please log into your Google account to install paid apps.</string>
    <string name="purchase_complete">Purchase complete!</string>
    <string name="download_automatically_message">Your app will automatically be downloaded in this device</string>
    <string name="purchase_error">Purchase error!</string>
    <string name="unsupported_app_title">Unsupported app!</string>
    <string name="unsupported_app_unreleased">The app %s is currently unsupported. This can be because the app is not yet widely released, or there is some other error.</string>
    <string name="install_anyway">Install anyway</string>
    <string name="this_app_may_not_work_properly">This app may not work properly!</string>
    <string name="may_not_work_warning_message">Forcing installation will allow you to download and install it, but it won\'t guarantee that it will work.&lt;br /&gt;&lt;br /&gt;Attempting to install unsupported apps may cause crashes or slow down the system.&lt;br /&gt;&lt;br /&gt;We\'re working on improving compatiblity with this application in a near future.</string>
</resources>