<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_menu_categories"
        android:title="@string/menu_categories" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/menu_search" />

    <item
        android:id="@+id/updatesFragment"
        android:icon="@drawable/ic_menu_updates"
        android:title="@string/menu_updates" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_settings" />

</menu>