<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/menu_home"
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_menu_home"
        android:orderInCategory="1"/>

    <item
        android:title="@string/menu_categories"
        android:id="@+id/menu_categories"
        android:icon="@drawable/ic_menu_categories"
        android:orderInCategory="1"/>

    <item
        android:title="@string/menu_search"
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="1"/>

    <item
        android:title="@string/menu_updates"
        android:id="@+id/menu_updates"
        android:icon="@drawable/ic_menu_updates"
        android:orderInCategory="1"/>

    <item
        android:title="@string/menu_settings"
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_settings"
        android:orderInCategory="1"/>

</menu>