<?xml version="1.0" encoding="utf-8"?><!--
  ~ Apps  Quickly and easily install Android apps onto your device!
  ~ Copyright (C) 2021  E FOUNDATION
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/information"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="?android:selectableItemBackground"
        android:paddingTop="10dp"
        android:text="@string/version"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appUpdatedOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="?android:selectableItemBackground"
        android:paddingTop="10dp"
        android:text="@string/updated_on"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appRequires"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="?android:selectableItemBackground"
        android:paddingTop="10dp"
        android:text="@string/min_android_version"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="?android:selectableItemBackground"
        android:paddingTop="10dp"
        android:text="@string/license"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appPackageName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="?android:selectableItemBackground"
        android:paddingTop="10dp"
        android:text="@string/package_name"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp" />

</LinearLayout>